feat: Remove bundled FFmpeg binaries and improve FFmpeg installation documentation
- Removed ~153 MB of bundled FFmpeg binaries (ffmpeg and ffprobe)
- Updated .gitignore to explicitly exclude FFmpeg binaries and generated diagnostic files
- Added comprehensive FFmpeg installation guide to README.md with platform-specific instructions
- Updated DEVELOPMENT.md with FFmpeg setup procedures for developers
- Deprecated download_ffmpeg.py script with clear migration instructions
- Script now warns users to install FFmpeg via system package managers

Benefits:
- Significantly reduces repository size (~153 MB)
- Improves maintainability by removing binary artifacts
- Provides clear documentation for all platforms (Ubuntu, macOS, Windows)
- Aligns with CI/CD improvements that use system package managers

CI/CD Status:
- All 121 tests pass with 80% code coverage
- GitHub Actions workflow installs FFmpeg via platform-specific package managers
- No longer depends on unreliable binary downloads during test setup

Migration:
- Users should install FFmpeg using system package managers
- Backward compatibility maintained for custom --ffmpeg-path flags
- Fallback to system PATH if local binaries not found

--- a/dialogue-guardian/.gitignore
+++ b/dialogue-guardian/.gitignore
@@ -1,2 +1,10 @@
 # Ignore downloaded binaries
-/bin/
+# FFmpeg should be installed via system package manager, not bundled
+/bin/ffmpeg
+/bin/ffprobe
+/bin/ffmpeg.exe
+/bin/ffprobe.exe
+/bin/temp/
+
+# Ignore generated diagnostic files from testing
+input_diagnostic_*.json
