ci: Add .gitignore to CI workflow trigger paths

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ on:
       - "dialogue-guardian/pyproject.toml"
       - "dialogue-guardian/requirements.txt"
       - ".github/workflows/ci.yml"
+      - ".gitignore"
   pull_request:
     branches: [main]
     paths:
