ci: Add caching for system package managers
Cache apt packages on Linux and Homebrew on macOS to avoid
re-downloading FFmpeg on every workflow run.

- Linux: Cache /var/cache/apt based on sources.list
- macOS: Cache ~/Library/Caches/Homebrew

This significantly reduces workflow execution time.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,24 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
+      - name: Cache apt packages (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/cache@v4
+        with:
+          path: /var/cache/apt
+          key: ${{ runner.os }}-apt-cache-${{ hashFiles('/etc/apt/sources.list*') }}
+          restore-keys: |
+            ${{ runner.os }}-apt-cache-
+
+      - name: Cache Homebrew (macOS)
+        if: matrix.os == 'macos-latest'
+        uses: actions/cache@v4
+        with:
+          path: ~/Library/Caches/Homebrew
+          key: ${{ runner.os }}-homebrew-cache
+          restore-keys: |
+            ${{ runner.os }}-homebrew-
+
       - name: Install FFmpeg (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: |
@@ -121,6 +139,14 @@ jobs:
           key: ${{ runner.os }}-lint-cache
           restore-keys: |
             ${{ runner.os }}-lint-
+
+      - name: Cache apt packages (Ubuntu)
+        uses: actions/cache@v4
+        with:
+          path: /var/cache/apt
+          key: ${{ runner.os }}-apt-cache-${{ hashFiles('/etc/apt/sources.list*') }}
+          restore-keys: |
+            ${{ runner.os }}-apt-cache-
 
       - name: Install FFmpeg
         run: |
