refactor: Improve logging format and code readability across multiple files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v6
+        env:
+          PYTHON_VERSION: ${{ matrix.python-version }}
         with:
           python-version: ${{ matrix.python-version }}
 
