--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,14 +96,28 @@ jobs:
           pytest tests/ -v --cov=src/guardian --cov-report=xml --cov-report=html
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
+        uses: codecov/codecov-action@v5
+        # if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
         with:
-          file: ./dialogue-guardian/coverage.xml
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
+          flags: matrix.os, matrix.python-version
+
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: code/test-results-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          report-type: test_results
+          
+      #- name: Upload coverage to Codecov
+      #  uses: codecov/codecov-action@v4
+      #  if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
+      #  with:
+      #    file: ./dialogue-guardian/coverage.xml
+      #    flags: unittests
+      #    name: codecov-umbrella
+      #    fail_ci_if_error: true
+      #    token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
