--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,29 +33,30 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ['3.9', '3.10', '3.11', '3.12']
 
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v6
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
 
-      - name: Cache pip dependencies
-        uses: actions/cache@v4
-        with:
-          path: ${{ runner.os == 'Linux' && '~/.cache/pip' || runner.os == 'macOS' && '~/Library/Caches/pip' || '~/AppData/Local/pip/Cache' }}
-          key: ${{ runner.os }}-pip-cache
-          restore-keys: |
-            ${{ runner.os }}-pip-
+      # - name: Cache pip dependencies
+      #   uses: actions/cache@v5.0.3
+      #   with:
+      #     path: ${{ runner.os == 'Linux' && '~/.cache/pip' || runner.os == 'macOS' && '~/Library/Caches/pip' || '~/AppData/Local/pip/Cache' }}
+      #     key: ${{ runner.os }}-pip-cache
+      #     restore-keys: |
+      #       ${{ runner.os }}-pip-
 
       - name: Cache Homebrew (macOS)
         if: matrix.os == 'macos-latest'
-        uses: actions/cache@v4
+        uses: actions/cache@v5.0.3
         with:
           path: ~/Library/Caches/Homebrew
           key: ${{ runner.os }}-homebrew-cache
@@ -104,7 +105,7 @@ jobs:
 
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
-        uses: code/test-results-action@v5
+        uses: codecov/test-results-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           report-type: test_results
@@ -119,32 +120,34 @@ jobs:
       #    fail_ci_if_error: true
       #    token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Upload coverage reports
-        uses: actions/upload-artifact@v4
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v6.0.0
         if: always()
         with:
           name: coverage-report-${{ matrix.os }}-${{ matrix.python-version }}
           path: dialogue-guardian/htmlcov/
           retention-days: 30
+          overwrite: true
 
   # Linting and code style checks
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v6
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'pip'
 
-      - name: Cache pip dependencies
-        uses: actions/cache@v4
-        with:
-          path: ${{ runner.os == 'Linux' && '~/.cache/pip' || runner.os == 'macOS' && '~/Library/Caches/pip' || '~/AppData/Local/pip/Cache' }}
-          key: ${{ runner.os }}-lint-cache
-          restore-keys: |
-            ${{ runner.os }}-lint-
+      #- name: Cache pip dependencies
+      #  uses: actions/cache@v4
+      #  with:
+      #    path: ${{ runner.os == 'Linux' && '~/.cache/pip' || runner.os == 'macOS' && '~/Library/Caches/pip' || '~/AppData/Local/pip/Cache' }}
+      #    key: ${{ runner.os }}-lint-cache
+      #    restore-keys: |
+      #      ${{ runner.os }}-lint-
 
       - name: Install FFmpeg
         run: |
@@ -187,7 +190,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
 
       - name: Set up Python
         uses: actions/setup-python@v6
@@ -210,7 +213,7 @@ jobs:
           python -m build
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6.0.0
         with:
           name: built-package
           path: dialogue-guardian/dist/
